# Harmonie_old

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
androidApp/: build.gradle
androidApp/src/main/: AndroidManifest.xml
androidApp/src/test/kotlin/: BucketAlgTests.kt
common/: build.gradle
common/src/main/kotlin/: Lifetime.kt  Property.kt  SequentialLifetime.kt  Signal.kt
common/src/test/kotlin/: ComponentContainerTests.kt  LanguageCodeTests.kt  LifetimeTests.kt
commonApp/: build.gradle
commonApp/src/test/kotlin/: BucketRepetitionAlgorithmTests.kt  TestDebugOptions.kt  (+5 more)
data/: next.bat  reinitDb.bat  runPart.bat  test.db
data/Texts/: README.md
data/Texts/Sample/: full.txt
data/corpus/: test  test.db  test_counts  test_ls_de.xml  test_ss_de.xml  test_ss_ru.xml
data/corpuses/: test.cdef
data/corpuses/Test/: harmonie.xml
data/db/: init_db.sql
dataProcessor/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
harmonie/: build.gradle  proguard-rules.pro
iosApp/: build.gradle
textProcessor/: build.gradle  examples.txt  reinstall.bat  textProcessor.cabal
textProcessor/src/main/haskell/Harmonie/: Main.hs  ReversePartProcessing.hs
textProcessor/src/main/haskell/Harmonie/Common/: DbAccess.hs  Gender.hs  IO.hs  NormalizedString.hs  PartOfSpeech.hs  Replace.hs  Split.hs  Substring.hs  TextPart.hs  Trim.hs  Word.hs
textProcessor/src/main/haskell/Harmonie/Common/DbAccess/: SQL.hs
textProcessor/src/main/haskell/Harmonie/Main/: Paths.hs  ProcessPartCommand.hs
textProcessor/src/test/haskell/: SplitterTests.hs  Tests.hs  TrimTests.hs
(+663 files in other folders)
