Name:             textProcessor
License:          MIT
cabal-version:    >= 1.10
Version:          0.1.0.0
build-type:       Simple


library
  default-language:   Haskell2010
  hs-source-dirs:     src/main/haskell/
  exposed-modules:    Harmonie.Common.DbAccess,
                      Harmonie.Common.DbAccess.SQL,
                      Harmonie.Common.Gender,
                      Harmonie.Common.PartOfSpeech,
                      Harmonie.Common.Split,
                      Harmonie.Common.Trim,
                      Harmonie.Common.NormalizedString
                      Harmonie.Main.ProcessPartCommand
  ghc-options:        -Wall
                      -Werror
  build-depends:      base,
                      directory,
                      filepath,
                      sqlite-simple,
                      text,
                      mtl == 2.1.3.1

test-suite tests
  default-language:   Haskell2010
  hs-source-dirs: src/test/haskell
  type:           exitcode-stdio-1.0
  main-is:        Tests.hs
  build-depends:  textProcessor,
                  base >= 4.7 && < 4.8,
                  tasty,
                  tasty-hunit,
                  directory,
                  filepath,
                  sqlite-simple,
                  text

executable textProcessor
  default-language:   Haskell2010
  build-depends:  textProcessor, base, directory, filepath, sqlite-simple, text, argparser
  hs-source-dirs: src/main/haskell
  Main-Is:        Harmonie/Main.hs
